--- a/ML_Depression_Detection.ipynb
+++ b/ML_Depression_Detection.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPi5sBM/p1VFrd42HCWJYB/",
+      "authorship_tag": "ABX9TyMJRHOCDnhfSr65opaL/hbC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1259,9 +1259,158 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Base on Accuracy: SVM > NB > LR\n",
+        "#5 Save Model and vectorizer\n",
+        "import joblib\n",
+        "\n",
+        "joblib.dump(svm_model, 'svm_model.pkl')\n",
+        "joblib.dump(vectorizer, 'tfidf_vectorizer.pkl')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9JmmKkV6NygP",
+        "outputId": "f89edc7b-4043-491d-db78-cee7490c4cce"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['tfidf_vectorizer.pkl']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def test_sentence(sentence):\n",
+        "    # Load the trained model and vectorizer\n",
+        "    svm_model = joblib.load('svm_model.pkl')\n",
+        "    vectorizer = joblib.load('tfidf_vectorizer.pkl')\n",
+        "\n",
+        "    # Vectorize the input sentence\n",
+        "    sentence_vec = vectorizer.transform([sentence])\n",
+        "\n",
+        "    # Make a prediction\n",
+        "    prediction = svm_model.predict(sentence_vec)\n",
+        "\n",
+        "    # Output the result\n",
+        "    if prediction[0] == 1:\n",
+        "        print(f\"The model predicts that the sentence is depressive.\")\n",
+        "    else:\n",
+        "        print(f\"The model predicts that the sentence is not depressive.\")"
+      ],
       "metadata": {
         "id": "NmjDunQkK110"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_sentence('It seems like nothing brings me joy anymore; everything feels gray.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yHXc53zuOggS",
+        "outputId": "ab3bfbe5-4ac1-44b6-9c95-e572b2378f5f"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The model predicts that the sentence is not depressive.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_sentence('I find it hard to get out of bed in the morning, as if the world is too heavy.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Tjszq8drO3qy",
+        "outputId": "4fa7e5e7-361a-4e6b-9794-4a6bf5baa305"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The model predicts that the sentence is depressive.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_sentence('I often catch myself thinking that life has lost its meaning and purpose.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DQArXtszPACJ",
+        "outputId": "29b57200-b08a-4c98-83a4-07d0aff83a49"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The model predicts that the sentence is depressive.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_sentence('My energy is drained, and even small tasks feel like insurmountable challenges.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XV4gqt1APHOx",
+        "outputId": "4cc66420-31a2-4898-df11-559fc1396685"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The model predicts that the sentence is depressive.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "B6sj85IXPKrZ"
       },
       "execution_count": null,
       "outputs": []
